	  force its apparent sector size to be 512 bytes (2014-3-24).
	* arch/arm/src/sam34/sam_lowputc.c sam_serial.c:  Fix a mysterious
	  multithreading bug that can log up the serial port (2014-3-14).
	* drivers/usbdev/Kconfig, usbmsc.c, usbmsc.h, and usbmsc_scsi.c:
	  Redesign threading module used with the USB MSC driver.  It was using
	  pthreads before and these were changed to a kernel thread.  The reason
	  for this has to do with task grouping:  A pthread is a memory of the
	  group of the task that started it.  A kernel thread is independent of
	  the task that started in (other than knowing it as the parent).  This
	  allows me to remove so kludge logic to "deparent" the pthread on
	  startup (2014-3-25).
	* tools/astyle.sh:  A code formatting tool from Lorenz Meier.  This
	  tool should do a better job than the old tools/indent.sh tool
	  (2014-3-26).
	* arch/arm/src/sam_hsmci.c and sam_spi.c:  Add support to invalidate
	  cached memory if the CMCC is enabled (not yet tested, 2014-3-26).
	* arch/arm/src/sam_spi.c:  Add logic to handle SPI word widths > 8
	  (also untested on initial checkin, 2014-3-26).
	* configs/sam4e-ek:  All configurations updated to run with 120MHz
	  CPU speed and with the CMCC enabled.  Calibrated delay loop
	  (2014-3-26).
	* drivers/lcd/Kconfig:  Add missing configuration for the MIO283QT-9A
	  LCD.  Reported by Toby Duckworth (2014-3-27).
	* arch/arm/include/sama5/chip.h and arch/arm/src/sama5/Kconfig:  Add
	  support for the SAMA5D36 (2014-3-28).
	* libc/strings/lib_strncpy.c:  Change ordering of test and copy.  Logic
	  would have failed if n=0; one byte was always copying before testing
	  for the end of the copy.
	* nuttx/configs/sama5d3-xplained/:  Add a board support configuration
	  for the Atmel SAMA5D3 Xplaiend board.  The initial check in is not
	  finished. For example, it still builds to run out of NOR FLASH but
	  the SAMA5D Xlpained has no NOR FLASH (2013-4-28).
 