@@ -7065,4 +7065,7 @@
 	  for the Atmel SAMA5D3 Xplaiend board.  The initial check in is not
 	  finished. For example, it still builds to run out of NOR FLASH but
 	  the SAMA5D Xlpained has no NOR FLASH (2013-4-28).
+	* arch/arm/src/sama5/sam_pmc.c and .h:  Add functions to calculate
+	  PLLACK, PCK, and MCK frequencies given the main clock frequency
+	  (2014-3-29).
  
